--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "dotenv": "^16.0.1",
-    "ethers": "^5.6.8"
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.9"
   }
 }
