Check multiple bunkers at the same time to see if they will become vulnerable if another bunker is evacuated

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ALCHEMY_KEY="YOUR_ALCHEMY_KEY_GOES_HERE"
 PRIVATE_KEY="YOUR_PRIVATE_KEY_GOES_HERE"
 OWNER_OF_MY_BUNKERS="THE_ADDRESS_THAT_OWNS_YOUR_BUNKERS_GOES_HERE"
-BUNKER_TO_HIT="BUNKER_TO_HIT"
+BUNKERS_TO_HIT="BUNKER_TO_HIT_1,BUNKER_TO_HIT_2"
 BUNKER_TO_EVACUATE="BUNKER_TO_EVACUATE"
